--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "@pmndrs/assets": "^1.6.0",
     "@react-three/drei": "^9.105.2",
     "@react-three/fiber": "^8.16.1",
-    "@types/three": "^0.163.0",
     "axios": "^1.6.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -23,12 +22,14 @@
   "devDependencies": {
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
+    "@types/three": "^0.163.0",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
     "@vitejs/plugin-react": "^4.2.1",
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "react": "^18.2.0",
     "typescript": "^5.2.2",
     "vite": "^5.2.0"
   }
